--- a/train_yolo12.ipynb
+++ b/train_yolo12.ipynb
@@ -282,14 +282,14 @@
         }
       ],
       "source": [
-        "model_nano = YOLO(\"yolov12n.yaml\")\n",
-        "model_nano = YOLO(\"yolov12n.pt\")\n",
-        "model_nano = YOLO(\"yolov12n.yaml\").load(\"yolov12n.pt\")"
+        "model = YOLO(\"yolov12s.yaml\")\n",
+        "model = YOLO(\"yolov12s.pt\")\n",
+        "model = YOLO(\"yolov12s.yaml\").load(\"yolov12s.pt\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "83cfc43c",
       "metadata": {
         "colab": {
@@ -1040,9 +1040,9 @@
         }
       ],
       "source": [
-        "results = model_nano.train(data=\"/kaggle/input/8-facial-expressions-for-yolo/9 Facial Expressions you need/data.yaml\", epochs=30, imgsz=640, device=0, save=True,\n",
-        "                           plots=True, patience=10, save_period=10, batch=32, cos_lr=True, half=True, lr0=0.02, warmup_epochs=5, mosaic=1.0, mixup=0.5,\n",
-        "                           close_mosaic=10, weight_decay=0.001, label_smoothing=0.1, freeze=[0,1,2,3])"
+        "results = model.train(data=\"/kaggle/input/8-facial-expressions-for-yolo/9 Facial Expressions you need/data.yaml\", epochs=30, imgsz=640, device=0, save=True,\n",
+        "                           plots=True, patience=10, save_period=10, batch=32, cos_lr=True, lr0=0.01, warmup_epochs=5, mosaic=1.0, mixup=0.2,\n",
+        "                           close_mosaic=10, weight_decay=0.001)"
       ]
     },
     {
