--- a/train_yolo8.ipynb
+++ b/train_yolo8.ipynb
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "bcaaa072",
       "metadata": {
         "colab": {
@@ -282,14 +282,12 @@
         }
       ],
       "source": [
-        "model_nano = YOLO(\"yolov8n.yaml\")\n",
-        "model_nano = YOLO(\"yolov8n.pt\")\n",
-        "model_nano = YOLO(\"yolov8n.yaml\").load(\"yolov8n.pt\")"
+        "model = YOLO(\"yolov8s.yaml\", pretrained_weights=\"yolov8s.pt\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "83cfc43c",
       "metadata": {
         "colab": {
@@ -1040,9 +1038,9 @@
         }
       ],
       "source": [
-        "results = model_nano.train(data=\"/kaggle/input/8-facial-expressions-for-yolo/9 Facial Expressions you need/data.yaml\", epochs=30, imgsz=640, device=0, save=True,\n",
-        "                           plots=True, patience=10, save_period=10, batch=32, cos_lr=True, half=True, lr0=0.02, warmup_epochs=5, mosaic=1.0, mixup=0.5,\n",
-        "                           close_mosaic=10, weight_decay=0.001, label_smoothing=0.1, freeze=[0,1,2,3])"
+        "results = model.train(data=\"/kaggle/input/8-facial-expressions-for-yolo/9 Facial Expressions you need/data.yaml\", epochs=30, imgsz=640, device=0, save=True,\n",
+        "                           plots=True, patience=10, save_period=10, batch=32, cos_lr=True, lr0=0.01, warmup_epochs=5, mosaic=1.0, mixup=0.2,\n",
+        "                           close_mosaic=10, weight_decay=0.001)"
       ]
     },
     {
