test new parameter

--- a/train_yolo8.ipynb
+++ b/train_yolo8.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "ee431253",
       "metadata": {
         "colab": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "15020e20",
       "metadata": {
         "colab": {
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "7b787c6a",
       "metadata": {
         "id": "7b787c6a",
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "IDAfkfWC84d3",
       "metadata": {
         "id": "IDAfkfWC84d3"
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ZGe1ri5l9NZ8",
       "metadata": {
         "colab": {
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "bcaaa072",
       "metadata": {
         "colab": {
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "83cfc43c",
       "metadata": {
         "colab": {
@@ -3457,14 +3457,15 @@
       ],
       "source": [
         "results = model.train(data=\"/kaggle/input/8-facial-expressions-for-yolo/9 Facial Expressions you need/data.yaml\",\n",
-        "                        epochs=100, imgsz=640, device=0, save=True,\n",
-        "                        plots=True, patience=10, save_period=10, batch=32, cos_lr=True, lr0=0.01, warmup_epochs=5, mosaic=1.0, mixup=0.2,\n",
-        "                        close_mosaic=10, weight_decay=0.001)"
+        "                        epochs=120, imgsz=640, device=0, save=True,\n",
+        "                        plots=True, patience=20, save_period=10, batch=32, cos_lr=True,\n",
+        "                        lr0=0.02, lrf=0.01, warmup_epochs=5, mosaic=1.0, mixup=0.2,\n",
+        "                        close_mosaic=15, weight_decay=0.0005, optimizer='sgd', momentum=0.937)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "q7MIvXTzkFAD",
       "metadata": {
         "colab": {
@@ -3489,7 +3490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "M_ZARn8_l-Gj",
       "metadata": {
         "colab": {
@@ -3527,7 +3528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "3D5Zu-fxmv8V",
       "metadata": {
         "colab": {
@@ -3617,9 +3618,8 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
+      "gpuType": "L4",
       "machine_shape": "hm",
       "provenance": []
     },
