--- a/train_yolo9.ipynb
+++ b/train_yolo9.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "ee431253",
       "metadata": {
         "colab": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "15020e20",
       "metadata": {
         "colab": {
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "IDAfkfWC84d3",
       "metadata": {
         "id": "IDAfkfWC84d3"
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "ZGe1ri5l9NZ8",
       "metadata": {
         "colab": {
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "bcaaa072",
       "metadata": {
         "colab": {
@@ -964,15 +964,16 @@
         }
       ],
       "source": [
-        "results = model.train(data=\"datasets/9 Facial Expressions you need/data.yaml\", \n",
-        "                        epochs=100, imgsz=640, device=0, save=True,\n",
-        "                        plots=True, patience=10, save_period=10, batch=32, cos_lr=True, lr0=0.01, warmup_epochs=5, mosaic=1.0, mixup=0.2,\n",
-        "                        close_mosaic=10, weight_decay=0.001)"
+        "results = model.train(data=\"/kaggle/input/8-facial-expressions-for-yolo/9 Facial Expressions you need/data.yaml\",\n",
+        "                        epochs=120, imgsz=640, device=0, save=True,\n",
+        "                        plots=True, patience=20, save_period=10, batch=32, cos_lr=True,\n",
+        "                        lr0=0.01, lrf=0.01, warmup_epochs=5, mosaic=1.0, mixup=0.2,\n",
+        "                        close_mosaic=0, weight_decay=0.0005, optimizer='sgd', momentum=0.937)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "q7MIvXTzkFAD",
       "metadata": {
         "colab": {
@@ -997,7 +998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "M_ZARn8_l-Gj",
       "metadata": {
         "colab": {
@@ -1035,7 +1036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "3D5Zu-fxmv8V",
       "metadata": {
         "colab": {
